<resources>
    <string name="app_name">RetoAgora</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Reto Agora</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Crear Perfil</string>
    <string name="menu_people">Personas</string>
    <string name="menu_logout">Cerrar Sesiòn</string>
    <string name="preferences_file">com.intercorp.retoagora.PREFERENCE_FILE_KEY</string>
    <string name="facebook_app_id">760020504867117</string>
    <string name="fb_login_protocol_scheme">fb760020504867117</string>
    <string name="ingresar_con_facebook">Ingresar con Facebook</string>
    <string name="buscar">Buscar...</string>
    <string name="aceptar">Aceptar</string>
    <string name="email">Email</string>
    <string name="nombre_y_apellidos">Nombre y Apellidos</string>
    <string name="edad">Edad</string>
    <string name="fecha_de_cumplea_os">Fecha de Cumpleaños</string>
    <string name="guardar">Guardar</string>
</resources>